# peopleql

./: Cargo.toml  README.md
database/: Dockerfile
database/postgresql/: Dockerfile  README.md
database/postgresql/dba-scripts/: questions-count.sql
database/postgresql/setup/: 001-users-docker.sql  001-users.sql  003-database-roles.sql  004-domains.sql  005-schemas.sql  006-tables.sql  010-roles.sql  011-populate.sql  999-desenv.sql
database/setup/: 001-users.sql  003-database-roles.sql  006-tables.sql  007-views.sql  008-sequences.sql  011-populate.sql
setup/: 001-users-docker.sql  002-database.sql  009-functions.sql  999-desenv.sql
src/: main.rs  model.rs  schema.rs
src/model/: cards.rs  prelude.rs  questions.rs  versions.rs
