[package]
name = "peopleql"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^0.11.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
async-graphql = { version = "4.0.4", features = ["decimal", "chrono", "uuid"] }
async-graphql-rocket = { version = "4.0.4" }